--- a/pages/contactanos.html
+++ b/pages/contactanos.html
@@ -1,20 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
 
+
 <head>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- Fonts -->
+    <link rel="fonts" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;400&family=Poppins:wght@200;400;600&display=swap" />
+
+    <!-- Doc Title -->
     <title>Document</title>
 
-
-
-
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-
+    <!-- Styles -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="../assets/styles/contactanos.css">
 
 </head>
+
 
 <body>
 
@@ -70,9 +74,9 @@
     </div>
 
 
+    <!-- Footer -->
     <footer>
         <div class="footer-container">
-
             <div class="row">
                 <div class="col-4">
                     <div class="divider"></div>
@@ -87,9 +91,7 @@
                     <div class="divider"></div>
                 </div>
             </div>
-
             <img src="../assets/images/Logo.svg" alt="logo" class="footerlogo">
-
             <div class="row links">
                 <div class="col-4">
                     <a href="./AboutUs.html">Acerca de nosotros</a>
@@ -106,9 +108,7 @@
 
 
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 
     <script src="../assets/scripts/scriptsMenuNavbar.js"></script>
 
