--- a/pages/AboutUs.html
+++ b/pages/AboutUs.html
@@ -4,8 +4,6 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 
     <link rel="icon" href="../assets/images/img_registrarUX/Letra G en rojo.ico">
     <link
@@ -20,7 +18,7 @@
 </head>
 
 
-<body>
+<body class="d-flex flex-column min-vh-100">
 
     <!-- Barra de navegación -->
     <nav class="custom-navbar d-flex justify-content-between">
@@ -272,30 +270,24 @@
 
     </div> <!--cierre de container-->
 
-    <footer>
+    <!-- Footer -->
+    <footer class="mt-auto">
         <div class="footer-container">
-
             <div class="row">
                 <div class="col-4">
                     <div class="divider"></div>
                 </div>
                 <div class="col-4 footer-social">
-                    <a href="https://www.linkedin.com/" class="social-icon"><img src="../assets/images/linkedin.png"
-                            alt="LinkedIn"></a>
-                    <a href="https://github.com/AlanOGxD/LinkGameIn" class="social-icon"><img
-                            src="../assets/images/github-logo.png" alt="GitHub"></a>
-                    <a href="https://discord.com/" class="social-icon"><img src="../assets/images/Discord.svg"
-                            alt="Discord"></a>
+                    <a href="#" class="social-icon"><img src="../assets/images/linkedin.png" alt="LinkedIn"></a>
+                    <a href="#" class="social-icon"><img src="../assets/images/github-logo.png" alt="GitHub"></a>
+                    <a href="#" class="social-icon"><img src="../assets/images/Discord.svg" alt="Discord"></a>
                     <!-- Agrega más redes sociales si es necesario -->
                 </div>
                 <div class="col-4">
                     <div class="divider"></div>
                 </div>
             </div>
-
             <img src="../assets/images/Logo.svg" alt="logo" class="footerlogo">
-
-
             <div class="row links">
                 <div class="col-4">
                     <a href="./AboutUs.html">Acerca de nosotros</a>
