--- a/pages/Terminosycondiciones.html
+++ b/pages/Terminosycondiciones.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="/assets/styles/terminos.css">
 </head>
 
-<body>
+<body class="d-flex flex-column min-vh-100">
 
     <!-- Barra de navegación -->
     <nav class="custom-navbar d-flex justify-content-between">
@@ -33,7 +33,6 @@
         <div class="config-menu" id="config-menu">
         </div> <!-- Cierre div de menu -->
     </nav> <!-- Cierre de Barra de navegación -->
-    <br>
 
     <h1 id="about">Términos y condiciones</h1>
     <!--Título de página-->
@@ -139,39 +138,33 @@
 
 
 
-    <footer>
+    <!-- Footer -->
+    <footer class="mt-auto">
         <div class="footer-container">
-
             <div class="row">
                 <div class="col-4">
                     <div class="divider"></div>
                 </div>
                 <div class="col-4 footer-social">
-                    <a href="https://www.linkedin.com/" class="social-icon"><img src="../assets/images/linkedin.png"
-                            alt="LinkedIn"></a>
-                    <a href="https://github.com/AlanOGxD/LinkGameIn" class="social-icon"><img
-                            src="../assets/images/github-logo.png" alt="GitHub"></a>
-                    <a href="https://discord.com/" class="social-icon"><img src="../assets/images/Discord.svg"
-                            alt="Discord"></a>
+                    <a href="#" class="social-icon"><img src="../assets/images/linkedin.png" alt="LinkedIn"></a>
+                    <a href="#" class="social-icon"><img src="../assets/images/github-logo.png" alt="GitHub"></a>
+                    <a href="#" class="social-icon"><img src="../assets/images/Discord.svg" alt="Discord"></a>
                     <!-- Agrega más redes sociales si es necesario -->
                 </div>
                 <div class="col-4">
                     <div class="divider"></div>
                 </div>
             </div>
-
             <img src="../assets/images/Logo.svg" alt="logo" class="footerlogo">
-
-
             <div class="row links">
                 <div class="col-4">
-                    <a href="/pages/AboutUs.html">Acerca de nosotros</a>
+                    <a href="./AboutUs.html">Acerca de nosotros</a>
                 </div>
                 <div class="col-4">
-                    <a href="/pages/Terminosycondiciones.html">Terminos y condiciones</a>
+                    <a href="./Terminosycondiciones.html">Terminos y condiciones</a>
                 </div>
                 <div class="col-4">
-                    <a href="/pages/contactanos.html">Contactanos</a>
+                    <a href="./contactanos.html">Contactanos</a>
                 </div>
             </div>
         </div>
