--- a/pages/contactanos.html
+++ b/pages/contactanos.html
@@ -20,7 +20,7 @@
 </head>
 
 
-<body>
+<body class="d-flex flex-column min-vh-100">
 
     <!-- Barra de navegación -->
     <nav class="custom-navbar d-flex justify-content-between">
@@ -75,7 +75,7 @@
 
 
     <!-- Footer -->
-    <footer>
+    <footer class="mt-auto">
         <div class="footer-container">
             <div class="row">
                 <div class="col-4">
