--- a/pages/dashBoard.html
+++ b/pages/dashBoard.html
@@ -57,12 +57,12 @@
         <div class="row">
 
             <!-- Cloumna de juegos -->
-            <div class="col-lg-3 borde" id="juegos">
+            <div class="col-lg-3 borde d-none d-md-none d-lg-block" id="juegos">
                 <p> </p>
             </div>
 
             <!-- Cloumna de dashboard  -->
-            <div class="col-lg-6" id="dash">
+            <div class="col-md-12 col-lg-6" id="dash">
 
                 <!-- Container de barra superior para publicar -->
                 <div class="container" id="publi">
@@ -99,14 +99,15 @@
                 <!-- Zona de publicaciones -->
                 <div class="container d-flex flex-column-flex justify-content-center align-items-center">
                     <div>
-                        <div class="card" id="historias">
-                            <img src="https://d1csarkz8obe9u.cloudfront.net/posterpreviews/gaming-flyer-design-template-d0db241e56497cd3212d9173a27294f8_screen.jpg?ts=1673690008"
-                                class="card-img-top" alt="...">
+                        <div class="card text-bg-secondary mb-3 " id="historias">
+                            <div class="card-header"><img
+                                    src="https://d1csarkz8obe9u.cloudfront.net/posterpreviews/gaming-flyer-design-template-d0db241e56497cd3212d9173a27294f8_screen.jpg?ts=1673690008"
+                                    class="card-img-top" alt="..."></div>
                             <div class="card-body">
-                                <p class="card-text">Some quick example text to build on the card title and make up the
-                                    bulk of
-                                    the card's content.</p>
-                            </div> <!--  -->
+                                <h5><a href="#"><img src="/assets/images/perfil.jpg" alt="perfil usuario" id="perfil"></a>Nickname Fulanito</h5>
+                                <p>Some quick example text to build on the card title and make up the
+                                    bulk of the card's content.</p>
+                            </div>
                         </div> <!-- Fin tarjeta de publicaciones -->
 
                         <!-- Tarjetas de publicaciones -->
@@ -127,7 +128,7 @@
             </div>
 
             <!-- Cloumna de amigos -->
-            <div class="col-lg-3 borde" id="amigos">
+            <div class="col-md-6 col-lg-3 borde d-none d-md-none d-lg-block" id="amigos">
                 <p></p>
             </div>
         </div>
@@ -140,6 +141,9 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
+    
+    <!-- Script local -->
+    <script src="/assets/scripts/dashBoard.js"></script>
 </body>
 
 </html>
