--- a/pages/login.html
+++ b/pages/login.html
@@ -39,16 +39,16 @@
             <div class="logo">
                 <img src="../assets/images/img_registrarUX/loginImg.png" alt="Logo">
             </div>
-            <form class="row g-3" action="#" method="post">
+            <form class="row g-3" action="#" method="post" id="login-form"><!-- Inicio del form -->
                 <div class="col-12 mb-3">
                     <div class="form-floating">
-                        <input type="email" class="form-control" id="input-email" placeholder="correo@ejemplo.com">
+                        <input type="email" name="email" class="form-control" id="input-email" placeholder="correo@ejemplo.com">
                         <label for="input-email">correo@ejemplo.com</label>
                     </div>
                 </div>
                 <div class="col-12 mb-3">
                     <div class="form-floating">
-                        <input type="password" class="form-control" id="input-password" placeholder="Contraseña">
+                        <input type="password" name="password" class="form-control" id="input-password" placeholder="Contraseña">
                         <label for="input-password">Contraseña</label>
                     </div>
                 </div>
@@ -56,6 +56,7 @@
                 <div class="d-grid gap-2 col-12 mx-auto" id="btn-register">
                     <button type="submit" class="btn btn-outline-danger  btn-lg">Iniciar sesión</button>
                 </div>
+
             </form>
             <div class="registro">
                 <p class="sinCuenta">Aún no tengo cuenta</p>
@@ -105,6 +106,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
+    <script src="../assets/scripts/login.js"></script>
     <script src="../assets/scripts/scriptsMenuNavbar.js"></script>
 </body>
 
