--- a/pages/contactanos.html
+++ b/pages/contactanos.html
@@ -39,33 +39,58 @@
 
 
     <div class="container">
-        <form class="row" id="form-register-user">
+        <form class="row needs-validation" id="form-register-user" novalidate action="https://formspree.io/f/xpzgoyjo" method="post">
             <div class="col" id="title-contact">
                 Contactanos
             </div>
             <div class="col-12 mb-3">
                 <div class="form-floating">
-                    <input type="text" class="form-control" id="input-name" placeholder="">
+                    <input type="text" name="input-name" class="form-control" id="input-name" placeholder="Nombre" required>
                     <label for="input-name">Nombre</label>
+                    <div class="valid-tooltip">
+                        Correcto
+                    </div>
+                    <div class="invalid-tooltip">
+                        Es necesario añadir el nombre
+                    </div>
                 </div>
             </div>
-            <div class="col-12 mb-3">
+            <div class="col-12 mb-3 position-relative">
                 <div class="form-floating">
-                    <input type="email" class="form-control" id="input-email" placeholder="">
+                    <input type="email" name="input-email" class="form-control" id="input-email" placeholder="correo@ejemplo.com" required>
                     <label for="input-email">correo@ejemplo.com</label>
+                    <div class="valid-tooltip">
+                        Correcto
+                    </div>
+                    <div class="invalid-tooltip">
+                        Es necesario añadir un correo
+                    </div>
                 </div>
             </div>
-            <div class="col-12 mb-3">
+            <div class="col-12 mb-3 position-relative">
                 <div class="form-floating">
-                    <input type="phone" class="form-control" id="input-phone" placeholder="">
+                    <input type="phone" name="input-phone" class="form-control" id="input-phone" placeholder="Teléfono" required>
                     <label for="input-phone">Teléfono</label>
+                    <div class="valid-tooltip">
+                        Correcto
+                    </div>
+                    <div class="invalid-tooltip">
+                        Es necesario añadir un número de teléfono
+                    </div>
                 </div>
             </div>
-            <div class="col-12 mb-3">
+            <div class="col-12 mb-3 position-relative">
                 <div class="form-floating">
-                    <textarea type="text" class="form-control" id="input-comment" rows="10" placeholder=""></textarea>
+                    <textarea type="text" name="input-comment" class="form-control" id="input-comment" rows="10" placeholder="" required></textarea>
                     <label for="input-comment">Escribe un mensaje...</label>
+                    <div class="valid-tooltip">
+                        Correcto
+                    </div>
+                    <div class="invalid-tooltip">
+                        Escríbenos un mensaje
+                    </div>
                 </div>
+                
             </div>
             <div class="d-grid gap-2 col-4 mx-auto" id="btn-register">
                 <button type="submit" class="btn btn-outline-danger  btn-lg">Enviar</button>
@@ -111,6 +136,28 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 
     <script src="../assets/scripts/scriptsMenuNavbar.js"></script>
+
+    <script>
+        // Example starter JavaScript for disabling form submissions if there are invalid fields
+        (() => {
+            'use strict'
+
+            // Fetch all the forms we want to apply custom Bootstrap validation styles to
+            const forms = document.querySelectorAll('.needs-validation')
+
+            // Loop over them and prevent submission
+            Array.from(forms).forEach(form => {
+            form.addEventListener('submit', event => {
+                if (!form.checkValidity()) {
+                    event.preventDefault()
+                    event.stopPropagation()
+            }
+
+            form.classList.add('was-validated')
+            }, false)
+            })
+        })()
+    </script>
 
 </body>
 
