--- a/pages/AboutUs.html
+++ b/pages/AboutUs.html
@@ -23,15 +23,16 @@
     <!-- Barra de navegación -->
     <nav class="custom-navbar d-flex justify-content-between">
         <!-- Contenedor Logo -->
-        <div id="Logo">
+        <div id="containerLogo">
             <a class="navbar-brand" href="/dashBoard.html">
                 <img src="../assets/images/Logo.svg" alt="logo" class="logo">
             </a>
-        </div> <!-- Cierre de contenedor logo -->
+        </div>  <!-- Cierre de contenedor logo -->
         <!-- Contenedor de Imagen Login/Logout -->
-        <div class="containerProfile position-relative" id="profile-img">
+        <div class="containerProfile position-relative" id="profileImg" >
         </div> <!-- Cierre de contenedor de Imagen Login/Logout -->
-        <div class="config-menu" id="config-menu">
+        <!-- Contenedor de menu -->
+        <div class="config-menu" id="configMenu">
         </div> <!-- Cierre div de menu -->
     </nav> <!-- Cierre de Barra de navegación -->
 
