--- a/pages/profile.html
+++ b/pages/profile.html
@@ -4,30 +4,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
+    <!-- Fonts -->
+    <link rel="fonts" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;400&family=Poppins:wght@200;400;600&display=swap" />
+
+    <!-- Doc Title -->
     <title>Document</title>
 
-    <!-- Estilos de Bootstrap -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
-
-    <!-- Hoja de estilos local -->
+    <!-- Styles -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="../assets/styles/stylesProfile.css">
 </head>
 
-<body>
+<body class="d-flex flex-column min-vh-100">
 
     <!-- Barra de navegación -->
     <nav class="custom-navbar d-flex justify-content-between">
         <!-- Contenedor Logo -->
-        <div id="Logo">
-            <a class="navbar-brand" href="/dashBoard.html">
-                <img src="../assets/images/Logo.svg" alt="logo" class="logo">
-            </a>
+        <div id="containerLogo">
         </div>  <!-- Cierre de contenedor logo -->
         <!-- Contenedor de Imagen Login/Logout -->
-        <div class="containerProfile position-relative" id="profile-img" >
+        <div class="containerProfile position-relative" id="profileImg" >
         </div> <!-- Cierre de contenedor de Imagen Login/Logout -->
-        <div class="config-menu" id="config-menu" >
+        <!-- Contenedor de menu -->
+        <div class="config-menu" id="configMenu">
         </div> <!-- Cierre div de menu -->
     </nav> <!-- Cierre de Barra de navegación -->
 
@@ -160,16 +160,26 @@
                     </div>
                 </div>
             </div>
-
         </div>
+
         <div class="col-xl-6"> <!-- Columna derecha -->
-            <div class="containerPubli">
-                <h3>
-                    Publica algo $Nickname...
-                </h3>
-                <img src="../assets/images/picture.png" alt="">
+            <div class="row">
+                <div class="containerMadePubli">
+                    <textarea type="text" class="form-control" id="madePubliText" rows="10" placeholder="Publica algo $Nickname..."></textarea>
+                    <img src="../assets/images/picture.png" alt="" id="madePubliImg">
+                    <button type="button" class="btn btn-primary" id="btnMadePubli">
+                        PUBLICAR
+                    </button>
+                </div>
+            </div>
+            <div class="row">
+                <div class="containerPubli">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga accusamus tempore architecto earum perferendis quo hic, sequi iure? Porro quasi facilis sapiente error quis rem minima aut ex pariatur obcaecati?
+                </div>
             </div>
         </div>
+        
+
     </div>
 
     <!-- Scripts de Bootstrap -->
@@ -178,6 +188,7 @@
         crossorigin="anonymous"></script>
 
     <script src="../assets/scripts/scriptsMenuNavbar.js"></script>
+    <script src="../assets/scripts/publications.js"></script>
 
 </body>
 
