--- a/pages/contactanos.html
+++ b/pages/contactanos.html
@@ -29,19 +29,12 @@
     <!-- Barra de navegación -->
     <nav class="custom-navbar d-flex justify-content-between">
         <!-- Contenedor Logo -->
-        <div id="logo-game">
-            <a class="navbar-brand">
-                <img src="../assets/images/Logo.svg" alt="logo" class="logo">
-            </a>
-        </div> <!-- Cierre de contenedor logo -->
         <div id="containerLogo">
         </div>  <!-- Cierre de contenedor logo -->
         <!-- Contenedor de Imagen Login/Logout -->
-        <div class="containerProfile position-relative" id="profile-img">
         <div class="containerProfile position-relative" id="profileImg" >
         </div> <!-- Cierre de contenedor de Imagen Login/Logout -->
-        <div class="config-menu" id="config-menu">
-        <!-- Contenedor de menu -->
+        <!-- Contenedor Menu Config -->
         <div class="config-menu" id="configMenu">
         </div> <!-- Cierre div de menu -->
     </nav> <!-- Cierre de Barra de navegación -->
