--- a/pages/registrarUsuario.html
+++ b/pages/registrarUsuario.html
@@ -44,45 +44,81 @@
 
 	<div class="container">
 
-		<form class="row" id="form-register-user">
+		<form class="row needs-validation" id="form-register-user" novalidate>
 			<div class="col-12" id="title-register">
 				Registro
 			</div>
-			<div class="col-12 mb-3">
+			<div class="col-12 mb-3 position-relative">
 				<div class="input-group">
 					<div class="form-floating">
-						<input type="text" class="form-control" id="input-name" placeholder="Nombre">
+						<input type="text" class="form-control" id="input-name" placeholder="Nombre" required>
 						<label for="input-name">Nombre</label>
+						<div class="valid-tooltip">
+							Correcto
+						</div>
+						<div class="invalid-tooltip">
+							Es necesario añadir el nombre
+						</div>
 					</div>
 					<div class="form-floating">
-						<input type="text" class="form-control" id="input-last-name" placeholder="Apellido">
+						<input type="text" class="form-control" id="input-last-name" placeholder="Apellido" required>
 						<label for="input-apellido">Apellido</label>
+						<div class="valid-tooltip">
+							Correcto
+						</div>
+						<div class="invalid-tooltip">
+							Es necesario añadir el apellido
+						</div>
 					</div>
 				</div>
 			</div>
-			<div class="col-12 mb-3">
+			<div class="col-12 mb-3 position-relative">
 				<div class="form-floating">
-					<input type="text" class="form-control" id="input-nickname" placeholder="Apodo">
+					<input type="text" class="form-control" id="input-nickname" placeholder="Apodo" required>
 					<label for="input-nickname">Apodo</label>
+					<div class="valid-tooltip">
+                        Correcto
+                    </div>
+                    <div class="invalid-tooltip">
+                        Es necesario añadir un apodo
+					</div>
 				</div>
 			</div>
-			<div class="col-12 mb-3">
+			<div class="col-12 mb-3 position-relative">
 				<div class="form-floating">
-					<input type="email" class="form-control" id="input-email" placeholder="correo@ejemplo.com">
+					<input type="email" class="form-control" id="input-email" placeholder="correo@ejemplo.com" required>
 					<label for="input-email">correo@ejemplo.com</label>
+					<div class="valid-tooltip">
+                        Correcto
+                    </div>
+                    <div class="invalid-tooltip">
+                        Es necesario añadir un correo
+					</div>
 				</div>
 			</div>
-			<div class="col-12 mb-3">
+			<div class="col-12 mb-3 position-relative">
 				<div class="form-floating">
-					<input type="password" class="form-control" id="input-password" placeholder="Contraseña">
+					<input type="password" class="form-control" id="input-password" placeholder="Contraseña" required>
 					<label for="input-password">Contraseña</label>
+					<div class="valid-tooltip">
+                        Correcto
+                    </div>
+                    <div class="invalid-tooltip">
+                        Es necesario añadir una contraseña
+					</div>
 				</div>
 			</div>
-			<div class="col-12 mb-3">
+			<div class="col-12 mb-3 position-relative">
 				<div class="form-floating">
 					<input type="password" class="form-control" id="input-password-confirm"
-						placeholder="Confirmar contraseña">
+						placeholder="Confirmar contraseña" required>
 					<label for="input-password-confirm">Confirmar contraseña</label>
+					<div class="valid-tooltip">
+                        Correcto
+                    </div>
+                    <div class="invalid-tooltip">
+                        Es necesario confirmar la contraseña
+					</div>
 				</div>
 			</div>
 			<div class="col-12">
@@ -99,16 +135,22 @@
 						jugadores</label>
 				</div>
 			</div>
-			<div class="col-12">
+			<div class="col-12 position-relative">
 				<div class="form-check">
-					<input type="checkbox" class="form-check-input" id="check-legal-age">
+					<input type="checkbox" class="form-check-input" id="check-legal-age" required>
 					<label for="check-legal-age" class="form-check-label">Soy mayor de 18 años</label>
+                    <div class="invalid-tooltip">
+                        Es necesario que seas mayor de edad
+					</div>
 				</div>
 			</div>
-			<div class="col-12">
+			<div class="col-12 position-relative">
 				<div class="form-check">
-					<input type="checkbox" class="form-check-input" id="check-terms-conditions">
+					<input type="checkbox" class="form-check-input" id="check-terms-conditions" required>
 					<label for="check-terms-conditions" class="form-check-label">Acepto términos y condiciones</label>
+                    <div class="invalid-tooltip">
+                        Es necesario que aceptes los términos y condiciones
+					</div>
 				</div>
 			</div>
 			<div class="d-grid gap-2 col-4 mx-auto" id="btn-register">
@@ -158,6 +200,7 @@
 		integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
 		crossorigin="anonymous"></script>
 	<script src="../assets/scripts/scriptsMenuNavbar.js"></script>
+	<script src="../assets/scripts/validaciones.js"></script>
 </body>
 
 </html>
