--- a/pages/login.html
+++ b/pages/login.html
@@ -33,19 +33,31 @@
             <div class="logo">
                 <img src="../assets/images/img_registrarUX/loginImg.png" alt="Logo">
             </div>
-            <form class="row g-3" action="#" method="post" id="login-form"><!-- Inicio del form -->
+            <form class="row needs-validation g-3" method="post" id="login-form" novalidate><!-- Inicio del form -->
                 <div class="col-12 mb-3">
                     <div class="form-floating">
                         <input type="email" name="email" class="form-control" id="input-email"
-                            placeholder="correo@ejemplo.com">
+                            placeholder="correo@ejemplo.com" required>
                         <label for="input-email">correo@ejemplo.com</label>
+                        <div class="valid-tooltip">
+							Correo válido
+						</div>
+						<div class="invalid-tooltip">
+							Asegurate de agregar una dirección de correo válida
+						</div>
                     </div>
                 </div>
                 <div class="col-12 mb-3">
                     <div class="form-floating">
                         <input type="password" name="password" class="form-control" id="input-password"
-                            placeholder="Contraseña">
+                            placeholder="Contraseña" required>
                         <label for="input-password">Contraseña</label>
+                        <div class="valid-tooltip">
+							Correcto
+						</div>
+						<div class="invalid-tooltip">
+							Coontraseña incorrecta
+						</div>
                     </div>
                 </div>
                 <a href="#" class="sinContraseña">Olvidé mi contraseña</a>
